--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow-y: auto;
 
     z-index: 1;
   }
@@ -84,17 +83,18 @@ body {
 }
 
 .portfolio {
-  padding: 4rem 4rem 0;
+  padding: 2rem 4rem 0;
   width: 90rem;
   height: 100%;
   display: flex;
-  gap: 4rem;
   aside {
+    margin-right: 1rem;
+
     justify-content: center;
     display: flex;
     flex-direction: column;
     border: 1px solid $electric-violet;
-    width: 40rem;
+    width: 35rem;
     height: fit-content;
     padding: 4rem;
     border-radius: 1rem;
@@ -103,8 +103,13 @@ body {
   }
 
   .portfolio__main {
+    padding: 0 1rem;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
+    content {
+      overflow-y: auto;
+    }
     h2 {
       color: $electric-violet-light;
       font-size: 1.5rem;
