--- a/src/components/aboutme.scss
+++ b/src/components/aboutme.scss
@@ -1,5 +1,9 @@
 .about {
-  padding-bottom: 3rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  height: 16rem;
+  overflow-y: auto;
+
   .about__content {
     margin-top: 1rem;
     line-height: 1.6;
