--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -10,7 +10,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 6rem;
+  margin-bottom: 3rem;
 
   h1 {
     font-size: 2.5rem;
