--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -1,7 +1,7 @@
 @import "../utility/utils.scss";
 
 .projects {
-  padding-bottom: 3rem;
+  margin-bottom: 3rem;
   .projects-grid {
     margin-top: 1.5rem;
     display: grid;
@@ -12,7 +12,7 @@
       background-color: $bg-light;
       border-radius: 0.5rem;
       padding: 1.5rem;
-      transition: box-shadow 0.3s ease;
+      transition: box-shadow 0.3s ease-in-out;
       border: 1px solid $electric-violet;
       box-shadow: $shadow;
 
